# rememberme

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  pyproject.toml
bot_src/: Dockerfile  bot_entrypoint.sh  constants.py  handlers.py  main.py
django_src/: Dockerfile  django_entrypoint.sh  manage.py
django_src/articles/: admin.py  constants.py  models.py
django_src/articles/migrations/: 0001_initial.py
django_src/rememberme/: asgi.py  settings.py  urls.py  wsgi.py
django_src/users/: constants.py  models.py
django_src/users/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
