[project]
name = "rememberme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "apscheduler>=3.11.0",
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
